--- a/App_movil-main/test/pubspec.yaml
+++ b/App_movil-main/test/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   webview_flutter: ^3.0.4
   hive: ^1.4.1+1
   firebase_core: ^2.4.0
+  cloud_firestore: ^4.2.0
 
 dev_dependencies:
   flutter_test:
