--- a/App_movil-main/test/pubspec.yaml
+++ b/App_movil-main/test/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hive: ^1.4.1+1
   firebase_core: ^2.4.0
   cloud_firestore: ^4.2.0
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
